--- a/blog/2024-07-09-boa-release-19.md
+++ b/blog/2024-07-09-boa-release-19.md
@@ -11,8 +11,8 @@ Boa v0.19 is now available! After 4 months of development we are very happy to p
 release of the Boa JavaScript engine. Boa makes it easy to embed a JS engine in your projects, and
 you can even use it from WebAssembly. See the [about](/about) page for more info.
 
-In this release, our conformance has grown from 85.03% to 86.20% in the official ECMAScript Test Suite
-(Test262). Interestingly, this isn't due to us passing more tests, but in fact the total number of tests from test262
+In this release, our conformance has grown from 85.03% to 87.3% in the official ECMAScript Test Suite
+(Test262). Interestingly, not all of this is due to us passing more tests, but in fact the total number of tests from test262
 [reducing by around 2000](https://github.com/tc39/test262/commit/ea2268aa4382013f5533b91f9ef50366ad065a86) from the [removal of custom calendars and timezones](https://github.com/tc39/proposal-temporal/issues/2826). Overall, Boa's conformance in real terms has improved by ~6%.
 
 You can check the full list of changes [here][changelog], and the full information on conformance
@@ -22,7 +22,7 @@ You can check the full list of changes [here][changelog], and the full informati
 
 ### Temporal
 
-Boa is continuing to progress on the [Temporal](https://github.com/tc39/proposal-temporal). The Temporal API is a new
+Boa is continuing to progress on [Temporal](https://github.com/tc39/proposal-temporal). The Temporal API is a new
 set of built-in objects and functions that is designed to be a more modern replacement for the `Date`
 object, providing a more feature-rich and flexible API for working with dates and times.
 
@@ -105,6 +105,8 @@ Thank you to the new contributors to Boa for this release, you can find their co
 - @getong made their first contribution in https://github.com/boa-dev/boa/pull/3836
 - @leoflalv made their first contribution in https://github.com/boa-dev/boa/pull/3867
 - @CrazyboyQCD made their first contribution in https://github.com/boa-dev/boa/pull/3898
+
+## Looking Forward
 
 ### How can you support Boa?
 
