Fill looking forward section

--- a/blog/2024-07-09-boa-release-19.md
+++ b/blog/2024-07-09-boa-release-19.md
@@ -12,8 +12,10 @@ release of the Boa JavaScript engine. Boa makes it easy to embed a JS engine in 
 you can even use it from WebAssembly. See the [about](/about) page for more info.
 
 In this release, our conformance has grown from 85.03% to 87.3% in the official ECMAScript Test Suite
-(Test262). Interestingly, not all of this is due to us passing more tests, but in fact the total number of tests from test262
-[reducing by around 2000](https://github.com/tc39/test262/commit/ea2268aa4382013f5533b91f9ef50366ad065a86) from the [removal of custom calendars and timezones](https://github.com/tc39/proposal-temporal/issues/2826). Overall, Boa's conformance in real terms has improved by ~6%.
+(Test262). Interestingly, this was partly because around 2000 tests
+were [removed from test262](https://github.com/tc39/test262/commit/ea2268aa4382013f5533b91f9ef50366ad065a86)
+as part of the [removal of custom calendars and timezones](https://github.com/tc39/proposal-temporal/issues/2826).
+Overall, Boa's conformance in real terms has improved by ~6%.
 
 You can check the full list of changes [here][changelog], and the full information on conformance
 [here][conformance].
@@ -108,9 +110,63 @@ Thank you to the new contributors to Boa for this release, you can find their co
 
 ## Looking Forward
 
+Before finishing this blog post, we wanted to give a special shoutout to @hansl, one of our new
+contributors for this release! He's been working on improving the ergonomics around exposing
+Rust functions and types as ECMAScript functions and classes with a lot of nice API enhancements.
+Some notable PRs are:
+
+- [Add a boa_interop crate](https://github.com/boa-dev/boa/pull/3772)
+- [Add a new type Convert<> to convert values](https://github.com/boa-dev/boa/pull/3786)
+- [Add a ContextData struct to inject host defined types from the context](https://github.com/boa-dev/boa/pull/3802)
+- [Add a js_class to implement the Class trait without boilerplate](https://github.com/boa-dev/boa/pull/3872)
+
+Unfortunately, the aforementioned `boa_interop` crate was not published for this version, and that's
+because we would like to polish it first and integrate it within the other crates of the project.
+However, we can give you a sneak peek of what some of the new APIs will allow you to do. Hopefully
+this will make you look forward for v0.20!
+
+```
+use boa_interop::{js_class, Ignore, JsClass};
+
+#[derive(Clone, Trace, Finalize, JsData)]
+pub enum Animal {
+    Cat,
+    Dog,
+    Other,
+}
+
+js_class! {
+    // Implements the [`Class`] trait for the `Animal` enum.
+    class Animal {
+        // This sets a field on the JavaScript object. The arguments to
+        // `init` are the arguments passed to the constructor.
+        public age(_name: Ignore, age: i32) -> i32 {
+            age
+        }
+        // This is called when a new instance of the class is created in
+        // JavaScript, e.g. `new Animal("cat")`.
+        constructor(name: String) {
+            match name.as_str() {
+                "cat" => Ok(Animal::Cat),
+                "dog" => Ok(Animal::Dog),
+                _ => Ok(Animal::Other),
+            }
+        }
+        // Declare a function on the class itself.
+        fn speak(this: JsClass<Animal>) -> JsString {
+            match *this.borrow() {
+                Animal::Cat => js_string!("meow"),
+                Animal::Dog => js_string!("woof"),
+                Animal::Other => js_string!(r"¯\_(ツ)_/¯"),
+            }
+        }
+    }
+}
+```
+
 ### How can you support Boa?
 
-Boa is an independent JavaScript engine implementing the ECMAScript specification, we rely on the
+Boa is an independent JavaScript engine implementing the ECMAScript specification, and we rely on the
 support of the community to keep it going. If you want to support us, you can do so by donating to
 our [open collective]. Proceeeds here go towards this very website, the domain name, and remunerating
 members of the team who have worked on the features released.
