--- a/blog/2024-07-09-boa-release-19.md
+++ b/blog/2024-07-09-boa-release-19.md
@@ -116,7 +116,7 @@ Rust functions and types as ECMAScript functions and classes with a lot of nice 
 Some notable PRs are:
 
 - [Add a boa_interop crate](https://github.com/boa-dev/boa/pull/3772)
-- [Add a new type Convert<> to convert values](https://github.com/boa-dev/boa/pull/3786)
+- [Add a new type Convert\<\> to convert values](https://github.com/boa-dev/boa/pull/3786)
 - [Add a ContextData struct to inject host defined types from the context](https://github.com/boa-dev/boa/pull/3802)
 - [Add a js_class to implement the Class trait without boilerplate](https://github.com/boa-dev/boa/pull/3872)
 
