looking forward updates

--- a/blog/2024-07-09-boa-release-19.md
+++ b/blog/2024-07-09-boa-release-19.md
@@ -110,6 +110,8 @@ Thank you to the new contributors to Boa for this release, you can find their co
 
 ## Looking Forward
 
+### API ergonomics
+
 Before finishing this blog post, we wanted to give a special shoutout to @hansl, one of our new
 contributors for this release! He's been working on improving the ergonomics around exposing
 Rust functions and types as ECMAScript functions and classes with a lot of nice API enhancements.
@@ -163,6 +165,12 @@ js_class! {
     }
 }
 ```
+
+### Performance
+
+Now that our conformance is farily high (87.3% in Test262), we will be focusing on improving the performance of the engine. This will involve re-writing the Garbage Collector from the one we have now which was a fork of [rust-gc](https://github.com/Manishearth/rust-gc) and modified heavily, to something which will work better for the engine and allow us to have paritioning, snapshots and other features which are not possible with the current GC. If this interests you, you can join the effort in our Matrix GC chat (see [Migration To Matrix](#migration-to-matrix) above).
+
+Boa will also be working on [migrating](https://github.com/boa-dev/boa/pull/3798) from a stack VM to a register-based VM. This will allow us to optimize the engine further and make it more competitive with other engines. We will also be working on improving the performance of the engine in general, and we will be looking at ways to make the engine faster and more efficient.
 
 ### How can you support Boa?
 
