add links to contributors

--- a/blog/2024-07-09-boa-release-19.md
+++ b/blog/2024-07-09-boa-release-19.md
@@ -100,19 +100,19 @@ Much of this work is possible thanks to our implementation of [Object Shapes](ht
 
 Thank you to the new contributors to Boa for this release, you can find their contributions below:
 
-- @robot-head made their first contribution in https://github.com/boa-dev/boa/pull/3730
-- @hansl made their first contribution in https://github.com/boa-dev/boa/pull/3755
-- @NickTomlin made their first contribution in https://github.com/boa-dev/boa/pull/3793
-- @linusg made their first contribution in https://github.com/boa-dev/boa/pull/3800
-- @getong made their first contribution in https://github.com/boa-dev/boa/pull/3836
-- @leoflalv made their first contribution in https://github.com/boa-dev/boa/pull/3867
-- @CrazyboyQCD made their first contribution in https://github.com/boa-dev/boa/pull/3898
+- [@robot-head](https://github.com/robot-head) made their first contribution in https://github.com/boa-dev/boa/pull/3730
+- [@hansl](https://github.com/hansl) made their first contribution in https://github.com/boa-dev/boa/pull/3755
+- [@NickTomlin](https://github.com/NickTomlin) made their first contribution in https://github.com/boa-dev/boa/pull/3793
+- [@linusg](https://github.com/linusg) made their first contribution in https://github.com/boa-dev/boa/pull/3800
+- [@getong](https://github.com/getong) made their first contribution in https://github.com/boa-dev/boa/pull/3836
+- [@leoflalv](https://github.com/leoflalv) made their first contribution in https://github.com/boa-dev/boa/pull/3867
+- [@CrazyboyQCD](https://github.com/CrazyboyQCD) made their first contribution in https://github.com/boa-dev/boa/pull/3898
 
 ## Looking Forward
 
 ### API ergonomics
 
-Before finishing this blog post, we wanted to give a special shoutout to @hansl, one of our new
+Before finishing this blog post, we wanted to give a special shoutout to [@hansl](https://github.com/hansl), one of our new
 contributors for this release! He's been working on improving the ergonomics around exposing
 Rust functions and types as ECMAScript functions and classes with a lot of nice API enhancements.
 Some notable PRs are:
