--- a/blog/2024-07-09-boa-release-19.md
+++ b/blog/2024-07-09-boa-release-19.md
@@ -172,6 +172,10 @@ Now that our conformance is farily high (87.3% in Test262), we will be focusing 
 
 Boa will also be working on [migrating](https://github.com/boa-dev/boa/pull/3798) from a stack VM to a register-based VM. This will allow us to optimize the engine further and make it more competitive with other engines. We will also be working on improving the performance of the engine in general, and we will be looking at ways to make the engine faster and more efficient.
 
+### v1.0
+
+We hope that the changes mentioned above will bring us closer to a v1.0 release. We are still some way off, but we are making progress and we are confident that we will be able to release a v1.0 version of Boa in the future.
+
 ### How can you support Boa?
 
 Boa is an independent JavaScript engine implementing the ECMAScript specification, and we rely on the
