Update title for v0.19 release blog post

--- a/blog/2024-07-09-boa-release-19.md
+++ b/blog/2024-07-09-boa-release-19.md
@@ -1,9 +1,9 @@
-<!-- ---
+---
 layout: post
 tags: [post]
-title: "Boa release v0.19"
+title: "Boa release v0.19: More progress on Temporal, new benchmarks, migration to Matrix, and more..."
 author: Boa Developers
---- -->
+---
 
 ## Summary
 
