--- a/blog/2024-07-09-boa-release-19.md
+++ b/blog/2024-07-09-boa-release-19.md
@@ -1,9 +1,9 @@
-<!-- ---
+---
 layout: post
 tags: [post]
-title: "Boa release v0.19"
+title: "Boa release v0.19: more progress on Temporal, new benchmarks, migration to Matrix, and more..."
 author: Boa Developers
---- -->
+---
 
 ## Summary
 
@@ -127,7 +127,7 @@ because we would like to polish it first and integrate it within the other crate
 However, we can give you a sneak peek of what some of the new APIs will allow you to do. Hopefully
 this will make you look forward for v0.20!
 
-```
+```rust
 use boa_interop::{js_class, Ignore, JsClass};
 
 #[derive(Clone, Trace, Finalize, JsData)]
