Move subtitle to description

--- a/blog/2024-07-09-boa-release-19.md
+++ b/blog/2024-07-09-boa-release-19.md
@@ -1,7 +1,8 @@
 ---
 layout: post
 tags: [post]
-title: "Boa release v0.19: more progress on Temporal, new benchmarks, migration to Matrix, and more..."
+title: "Boa release v0.19"
+description: "More progress on Temporal, new benchmarks, migration to Matrix, and more..."
 author: Boa Developers
 ---
 
