Adjust the section hierarchy of release v0.19 post (#164)
* Adjust the section hierarchy of release v0.19 post

* Move subtitle to description

--- a/blog/2024-07-09-boa-release-19.md
+++ b/blog/2024-07-09-boa-release-19.md
@@ -1,7 +1,8 @@
 ---
 layout: post
 tags: [post]
-title: "Boa release v0.19: more progress on Temporal, new benchmarks, migration to Matrix, and more..."
+title: "Boa release v0.19"
+description: "More progress on Temporal, new benchmarks, migration to Matrix, and more..."
 author: Boa Developers
 ---
 
@@ -53,15 +54,15 @@ Over time we will eventually need to work with other engines to have a more adva
 
 This change also offered a nice side effect of not having benchmark or test262 data in the main repository anymore. Last time we released we had [reports](https://www.reddit.com/r/rust/comments/1b91ora/comment/ktue8rf/) of the repository being too large, so we've taken steps to reduce the size of the repository by moving this data to a separate repository and building a nightly version for reporting. Not only this makes it easier for anyone cloning Boa today but pushes to `main` are now much faster due to us not having to run test262 or Benchmarks each time.
 
-## Migration to Matrix
+### Migration to Matrix
 
 The Boa team will be migrating to Matrix from our Discord servers over the course of this year. This means we will hang out in the [`#boa:matrix.org`](https://matrix.to/#/#boa:matrix.org) room and will be available for questions and discussions there. We will also be using Matrix for other break-out rooms on future development in areas such as [Performance](https://matrix.to/#/!odQJQiuPFJtUBzgoXY:matrix.org?via=matrix.org&via=mozilla.org), [Intl](https://matrix.to/#/!rsWLMsIzfquQAbDoak:matrix.org?via=matrix.org) and [Temporal](https://matrix.to/#/!DeQjFAUjAPAffIsCgq:matrix.org?via=matrix.org&via=mozilla.org&via=igalia.com). We will be keeping the Discord server open for a while to allow people to migrate over, but we will eventually close it down sometime in 2025.
 
 Boa has long been a user of Discord, pretty much since the beginning of the project, but as the project has grown and matured, we have chosen to move more in line to other communities who use Matrix for communication, such as TC39 who work on ECMAScript standard. With Boa's increased conformance and ability to work closer with the standard committee when implementing Temporal and other new specifications meant that a migration to Matrix was the most natural choice to ease communication with the broader JavaScript implementer communities.
 
-## Optimizations
+### Optimizations
 
-### Release binary stripping
+#### Release binary stripping
 
 Boa's binaries are on the larger side by default due to including ICU data. We may eventually move to a system where this needs to be fed from the host. However, until then there are other tricks we can employ to bring down our size, one of those is binary stripping. We can remove debug information from the release binary to reduce the size.
 
@@ -70,7 +71,7 @@ Boa's binaries are on the larger side by default due to including ICU data. We m
 | boa        | 26MB  | 25MB  |
 | boa_tester | 27MB  | 25MB  |
 
-### Dense array storage variants for i32 and f64
+#### Dense array storage variants for i32 and f64
 
 This release adds [dense array storage](https://github.com/boa-dev/boa/pull/3760) variants for `i32` and `f64` types. This allows us to store arrays of these types more efficiently, and also allows us to optimize certain operations on these arrays.
 
@@ -176,7 +177,7 @@ Boa will also be working on [migrating](https://github.com/boa-dev/boa/pull/3798
 
 We hope that the changes mentioned above will bring us closer to a v1.0 release. We are still some way off, but we are making progress and we are confident that we will be able to release a v1.0 version of Boa in the future.
 
-### How can you support Boa?
+## How can you support Boa?
 
 Boa is an independent JavaScript engine implementing the ECMAScript specification, and we rely on the
 support of the community to keep it going. If you want to support us, you can do so by donating to
@@ -201,7 +202,7 @@ itself and for users of the engine. Feel free to contact us in [Matrix].
 [action]: https://github.com/boa-dev/criterion-compare-action
 [Matrix]: https://matrix.to/#/#boa:matrix.org
 
-### Thank You
+## Thank You
 
 Once again, big thanks to [all the contributors][contributors] of this release!!
 
