Add truncation markers and a central Boa Developers author

--- a/blog/2021-09-30-boa-release-13.md
+++ b/blog/2021-09-30-boa-release-13.md
@@ -2,7 +2,7 @@
 layout: post
 tags: [post]
 title: "Boa release v0.13"
-author: Boa Developers
+authors: boa-dev
 permalink: 2021/09/30/boa-release-13.html
 ---
 
@@ -11,6 +11,8 @@ Boa v0.13 is here! Boa is a JavaScript engine written in the Rust programming la
 We currently support part of the language. In this release, our conformance has grown to 41.97% of the official ECMAScript Test Suite (Test262). We have closed 40 issues and merged 105 pull requests. You can check the full list of changes [here](https://github.com/boa-dev/boa/blob/v0.13/CHANGELOG.md).
 
 This release brings some new features, such as support for calling Rust closures from JavaScript to improve better interopability between JS and Rust.
+
+<!--truncate-->
 
 ## ECMAScript language features
 
