--- a/blog/2022-03-15-boa-release-14.md
+++ b/blog/2022-03-15-boa-release-14.md
@@ -2,7 +2,7 @@
 layout: post
 tags: [post]
 title: "Boa release v0.14"
-author: Boa Developers
+authors: boa-dev
 ---
 
 ## Summary
@@ -16,6 +16,8 @@ in the official ECMAScript Test Suite (Test262). The engine now passes 43,986 te
 (32.5% increase), and we have closed 40 issues and merged 137 pull requests. You can check the full list of changes
 [here](https://github.com/boa-dev/boa/blob/v0.14/CHANGELOG.md), and the full information on conformance
 [here](https://boa-dev.github.io/boa/test262/).
+
+<!--truncate-->
 
 ## Boa has moved
 
