--- a/blog/2022-09-25-boa-release-16.md
+++ b/blog/2022-09-25-boa-release-16.md
@@ -2,7 +2,7 @@
 layout: post
 tags: [post]
 title: "Boa release v0.16"
-author: Boa Developers
+authors: boa-dev
 ---
 
 ## Summary
@@ -16,6 +16,8 @@ in the official ECMAScript Test Suite (Test262). The engine now passes 68,612 te
 (21.7% increase), and we have closed 9 issues and merged 59 pull requests. You can check the full list of changes
 [here](https://github.com/boa-dev/boa/blob/v0.16/CHANGELOG.md), and the full information on conformance
 [here](https://boa-dev.github.io/boa/test262/).
+
+<!--truncate-->
 
 ## New ECMAScript features
 
