--- a/blog/2022-10-24-boa-usage.md
+++ b/blog/2022-10-24-boa-usage.md
@@ -2,7 +2,7 @@
 layout: post
 tags: [post]
 title: "Adding a JavaScript interpreter to your Rust project"
-author: Boa Developers
+authors: boa-dev
 ---
 
 ## Introduction
@@ -31,6 +31,8 @@ _Note: You can see more examples of integrating Boa in [our repository][examples
 [issues]: https://github.com/boa-dev/boa/issues?q=is%3Aopen+is%3Aissue+label%3A%22help+wanted%22%2CHacktoberfest%2CE-Easy%2C%22good+first+issue%22+no%3Aassignee
 [opencollective]: https://opencollective.com/boa
 [examples-repo]: https://github.com/boa-dev/boa/tree/main/boa_examples
+
+<!--truncate-->
 
 ## Starting from scratch
 
