--- a/blog/2023-07-08-boa-release-17.md
+++ b/blog/2023-07-08-boa-release-17.md
@@ -2,7 +2,7 @@
 layout: post
 tags: [post]
 title: "Boa release v0.17"
-author: Boa Developers
+authors: boa-dev
 ---
 
 ## Summary
@@ -31,6 +31,8 @@ Furthermore, we now have a new domain for Boa, [boajs.dev][boajs].
 [easy_issues]: https://github.com/boa-dev/boa/issues?q=is%3Aopen+is%3Aissue+label%3AE-Easy
 [first_issues]: https://github.com/boa-dev/boa/issues?q=is%3Aopen+is%3Aissue+label%3A%22good+first+issue%22
 [boajs]: https://boajs.dev
+
+<!--truncate-->
 
 ## Highlights
 
