--- a/blog/2021-01-14-boa-release-11/index.mdx
+++ b/blog/2021-01-14-boa-release-11/index.mdx
@@ -2,7 +2,7 @@
 layout: post
 tags: [post]
 title: "Boa release v0.11"
-author: Boa Developers
+authors: boa-dev
 ---
 
 Boa has reached a new release. v0.11, our biggest one yet!
@@ -10,6 +10,8 @@ Boa has reached a new release. v0.11, our biggest one yet!
 Since v0.10 we've closed 77 issues and merged 129 pull requests. The engine has been faster and more compliant to the spec. Below are some of the highlights but please see the [changelog](https://github.com/boa-dev/boa/blob/main/CHANGELOG.md#0110-2021-01-14) for more information.
 
 What is Boa? See the [About](/about) page for more info.
+
+<!--truncate-->
 
 ## Test 262
 
