--- a/blog/2022-06-10-boa-release-15.md
+++ b/blog/2022-06-10-boa-release-15.md
@@ -2,7 +2,7 @@
 layout: post
 tags: [post]
 title: "Boa release v0.15"
-author: Boa Developers
+authors: boa-dev
 ---
 
 ## Summary
@@ -16,6 +16,8 @@ in the official ECMAScript Test Suite (Test262). The engine now passes 56,372 te
 (28.1% increase), and we have closed 18 issues and merged 58 pull requests. You can check the full list of changes
 [here](https://github.com/boa-dev/boa/blob/v0.15/CHANGELOG.md), and the full information on conformance
 [here](https://boa-dev.github.io/boa/test262/).
+
+<!--truncate-->
 
 ## New ECMAScript features
 
