--- a/blog/2024-03-07-boa-release-18.md
+++ b/blog/2024-03-07-boa-release-18.md
@@ -2,7 +2,7 @@
 layout: post
 tags: [post]
 title: "Boa release v0.18"
-author: Boa Developers
+authors: boa-dev
 ---
 
 ## Summary
@@ -42,6 +42,8 @@ some code instead.
 [collective]: https://opencollective.com/boa
 [easy_issues]: https://github.com/boa-dev/boa/issues?q=is%3Aopen+is%3Aissue+label%3AE-Easy
 [first_issues]: https://github.com/boa-dev/boa/issues?q=is%3Aopen+is%3Aissue+label%3A%22good+first+issue%22
+
+<!--truncate-->
 
 ## Highlights
 
