--- a/blog/2024-07-09-boa-release-19.md
+++ b/blog/2024-07-09-boa-release-19.md
@@ -3,7 +3,7 @@ layout: post
 tags: [post]
 title: "Boa release v0.19"
 description: "More progress on Temporal, new benchmarks, migration to Matrix, and more..."
-author: Boa Developers
+authors: boa-dev
 ---
 
 ## Summary
@@ -20,6 +20,8 @@ Overall, Boa's conformance in real terms has improved by ~6%.
 
 You can check the full list of changes [here][changelog], and the full information on conformance
 [here][conformance].
+
+<!--truncate-->
 
 ## Highlights
 
