--- a/blog/2024-12-05-boa-release-020/index.mdx
+++ b/blog/2024-12-05-boa-release-020/index.mdx
@@ -60,26 +60,13 @@ Embedders can now create native errors in Rust and pass them into the JavaScript
 The below example creates a new `JsError` from a Rust standard error [`err`](https://doc.rust-lang.org/std/error/trait.Error.html). This will create a new `JsNativeError` with the message of the standard error.
 
 ````rust
-    /// # Examples
-    ///
-    /// ```
-    /// # use boa_engine::JsError;
-    /// let error = std::io::Error::new(std::io::ErrorKind::Other, "oh no!");
-    /// let js_error: JsError = JsError::from_rust(error);
-    ///
-    /// assert_eq!(js_error.as_native().unwrap().message(), "oh no!");
-    /// assert!(js_error.as_native().unwrap().cause().is_none());
-    /// ```
-    #[must_use]
-    pub fn from_rust(err: impl error::Error) -> Self {
-        let mut native_err = JsNativeError::error().with_message(err.to_string());
-        if let Some(source) = err.source() {
-            native_err = native_err.with_cause(Self::from_rust(source));
-        }
+use boa_engine::JsError;
 
-        Self::from_native(native_err)
-    }
-````
+let error = std::io::Error::new(std::io::ErrorKind::Other, "oh no!");
+let js_error: JsError = JsError::from_rust(error);
+
+assert_eq!(js_error.as_native().unwrap().message(), "oh no!");
+assert!(js_error.as_native().unwrap().cause().is_none());
 
 ## Boa Runtime
 
