Updated links in some other places

--- a/blog/2021-01-14-boa-release-11/index.mdx
+++ b/blog/2021-01-14-boa-release-11/index.mdx
@@ -33,7 +33,7 @@ import conformance_dark from "./conformance_dark.png";
 
 Previously many tests failed to run as the test-runner was still being worked on. Those issues have been fixed and our tests jumped from 38k to 78K which is why the graph flips up above. Boa should never panic, however we've had many tests reveal areas where panics happen, this has helped us identify and apply correct fixes, to the point where our panics have gone from hundreds to under 50 (the graph above shows the dark red diminishing).
 
-For live tracking of conformance tests you can check [here](https://boa-dev.github.io/boa/test262/). Below is a snapshot of the previous version and today.
+For live tracking of conformance tests you can check [here](/conformance). Below is a snapshot of the previous version and today.
 
 <div
   className="row"
