--- a/blog/2022-06-10-boa-release-15.md
+++ b/blog/2022-06-10-boa-release-15.md
@@ -15,7 +15,7 @@ Boa currently supports part of the JavaScript language. In this release, our con
 in the official ECMAScript Test Suite (Test262). The engine now passes 56,372 tests, coming from 43,986 in Boa 0.14
 (28.1% increase), and we have closed 18 issues and merged 58 pull requests. You can check the full list of changes
 [here](https://github.com/boa-dev/boa/blob/v0.15/CHANGELOG.md), and the full information on conformance
-[here](https://boa-dev.github.io/boa/test262/).
+[here](/conformance).
 
 <!--truncate-->
 
