--- a/blog/2022-10-24-boa-usage.md
+++ b/blog/2022-10-24-boa-usage.md
@@ -19,7 +19,7 @@ This is where Boa enters the scene. Boa is a Javascript engine fully written in 
 can be used in places where you need most of the JavaScript language to work, even though, we would
 advise to wait to get all our [known blocker bugs][blocking] solved before using this for critical
 workloads. You can check how conformant we are with the official ECMAScript specification
-[here](https://boa-dev.github.io/boa/test262/).
+[here](/conformance).
 
 And, before going further, we would like to mention that you can contribute to Boa by solving one
 of the [issues][issues] where we need special help, and we now also accept financial contributions
