--- a/blog/2022-03-15-boa-release-14.md
+++ b/blog/2022-03-15-boa-release-14.md
@@ -15,7 +15,7 @@ Boa currently supports part of the JavaScript language. In this release, our con
 in the official ECMAScript Test Suite (Test262). The engine now passes 43,986 tests, coming from 33,192 in Boa 0.13
 (32.5% increase), and we have closed 40 issues and merged 137 pull requests. You can check the full list of changes
 [here](https://github.com/boa-dev/boa/blob/v0.14/CHANGELOG.md), and the full information on conformance
-[here](https://boa-dev.github.io/boa/test262/).
+[here](/conformance).
 
 <!--truncate-->
 
