--- a/blog/2022-09-25-boa-release-16.md
+++ b/blog/2022-09-25-boa-release-16.md
@@ -15,7 +15,7 @@ Boa currently supports part of the JavaScript language. In this release, our con
 in the official ECMAScript Test Suite (Test262). The engine now passes 68,612 tests, coming from 56,372 in Boa 0.15
 (21.7% increase), and we have closed 9 issues and merged 59 pull requests. You can check the full list of changes
 [here](https://github.com/boa-dev/boa/blob/v0.16/CHANGELOG.md), and the full information on conformance
-[here](https://boa-dev.github.io/boa/test262/).
+[here](/conformance).
 
 <!--truncate-->
 
