--- a/blog/2023-07-08-boa-release-17.md
+++ b/blog/2023-07-08-boa-release-17.md
@@ -26,7 +26,7 @@ you wish to sponsor Boa, you can do so by donating to our [open collective][coll
 Furthermore, we now have a new domain for Boa, [boajs.dev][boajs].
 
 [changelog]: https://github.com/boa-dev/boa/blob/v0.17/CHANGELOG.md
-[conformance]: https://boajs.dev/boa/test262/
+[conformance]: /conformance
 [collective]: https://opencollective.com/boa
 [easy_issues]: https://github.com/boa-dev/boa/issues?q=is%3Aopen+is%3Aissue+label%3AE-Easy
 [first_issues]: https://github.com/boa-dev/boa/issues?q=is%3Aopen+is%3Aissue+label%3A%22good+first+issue%22
