Update links & conformance banner (#206)
* Update conformance message

We now pass more than 93% of the test suite, and in fact, 0.20 already passed around 90%.

* Update conformance link for 0.20 blog post

* Updated links in some other places

* Small typo fix

* Using full link for RSS

--- a/blog/2021-09-30-boa-release-13.md
+++ b/blog/2021-09-30-boa-release-13.md
@@ -79,7 +79,7 @@ Test262 is the implementation conformance test suite maintained by TC39. It's us
 
 Since v0.12 we have managed to pass 6391 more tests and are 7% more conformant. This has been great progress by all involved and we hope this continues to improve. Most of these new passes have come from refactors across the codebase which have had little impact on performance, in fact, v0.13 is much faster than v0.12.
 
-You can track Boa's conformance to the specification [here](https://boa-dev.github.io/boa/test262/#)
+You can track Boa's conformance to the specification [here](/conformance)
 
 ## Keeping up with Rust
 
