--- a/blog/2024-03-07-boa-release-18.md
+++ b/blog/2024-03-07-boa-release-18.md
@@ -37,7 +37,7 @@ You can also check [easy][easy_issues] or [good first issues][first_issues] if y
 some code instead.
 
 [changelog]: https://github.com/boa-dev/boa/blob/v0.18/CHANGELOG.md
-[conformance]: https://boajs.dev/boa/test262/
+[conformance]: /conformance
 [feed]: https://boajs.dev/blog/rss.xml
 [collective]: https://opencollective.com/boa
 [easy_issues]: https://github.com/boa-dev/boa/issues?q=is%3Aopen+is%3Aissue+label%3AE-Easy
